3821B1FI2/9_gelu_ocl/kostin_artem/log.txt
In file included from /home/crazyproger/sandbox/cuda-2024/3821B1FI2/9_gelu_ocl/kostin_artem/gelu_ocl.cpp:1:
/usr/local/cuda/include/CL/cl.hpp:437:112: note: ‘#pragma message: opencl.hpp: CL_HPP_TARGET_OPENCL_VERSION is not defined. It will default to 300 (OpenCL 3.0)’
  437 | # pragma message("opencl.hpp: CL_HPP_TARGET_OPENCL_VERSION is not defined. It will default to 300 (OpenCL 3.0)")
      |                                                                                                                ^
/home/crazyproger/sandbox/cuda-2024/3821B1FI2/9_gelu_ocl/kostin_artem/gelu_ocl.cpp: In function ‘std::vector<float> GeluOCL(const std::vector<float>&)’:
/home/crazyproger/sandbox/cuda-2024/3821B1FI2/9_gelu_ocl/kostin_artem/gelu_ocl.cpp:16:32: error: ‘CL_DEVICE_GPU’ was not declared in this scope; did you mean ‘CL_DEVICE_TYPE’?
   16 |     err |= platform.getDevices(CL_DEVICE_GPU, &device);
      |                                ^~~~~~~~~~~~~
      |                                CL_DEVICE_TYPE
/home/crazyproger/sandbox/cuda-2024/3821B1FI2/9_gelu_ocl/kostin_artem/gelu_ocl.cpp:42:85: error: ‘output’ was not declared in this scope
   42 |     queue.enqueueReadBuffer(outputBuffer, CL_TRUE, 0, input.size() * sizeof(float), output.data());
      |                                                                                     ^~~~~~
